empezando pagina proyectos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,7 +416,7 @@ input, button, textarea, select {
   grid-area: subtitle;
   color: var(--xlc-white);
 }
-.xlc-index-init-section .xlc-grid div {
+.xlc-index-init-section .xlc-grid .xlc-newsletter {
   grid-area: newsletter;
 }
 .xlc-index-init-section::after {
@@ -692,6 +692,124 @@ input, button, textarea, select {
 }
 
 /* #endregion Proyectos */
+/* #region Cada proyecto */
+.xlc-proyecto-init-section {
+  padding-top: var(--xlc-header-height);
+  padding-bottom: var(--xlc-header-height);
+  display: flex;
+  align-items: flex-end;
+}
+.xlc-proyecto-init-section .xlc-grid {
+  grid-template-rows: auto auto;
+  grid-template-areas: "title title title title title ." "subtitle subtitle subtitle subtitle subtitle subtitle";
+}
+.xlc-proyecto-init-section .xlc-grid .xlc-title {
+  grid-area: title;
+  color: var(--xlc-white);
+}
+.xlc-proyecto-init-section .xlc-grid .xlc-subtitle {
+  grid-area: subtitle;
+  color: var(--xlc-white);
+}
+
+.xlc-proyecto-info-section .xlc-grid {
+  grid-template-rows: auto auto;
+  grid-template-areas: "title title title title title title . . . . . ." "description description description description description description . . descargas descargas descargas descargas";
+  padding-bottom: var(--xlc-header-height);
+  align-content: stretch;
+  height: 100%;
+}
+.xlc-proyecto-info-section .xlc-grid .xlc-title {
+  grid-area: title;
+}
+.xlc-proyecto-info-section .xlc-grid .xlc-description {
+  grid-area: description;
+  align-self: end;
+  font-size: var(--xlc-xs-font-size);
+  line-height: var(--xlc-paragraph-line-height);
+}
+.xlc-proyecto-info-section .xlc-grid .xlc-descargas {
+  grid-area: descargas;
+  align-self: end;
+  max-height: 100%;
+  overflow-y: auto;
+}
+.xlc-proyecto-info-section .xlc-grid .xlc-descargas .xlc-descarga {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1rem 1rem 0;
+  border-top: 1px solid var(--xlc-gray);
+}
+.xlc-proyecto-info-section .xlc-grid .xlc-descargas .xlc-descarga .xlc-descarga-title {
+  font-size: var(--xlc-s-font-size);
+  font-weight: bold;
+}
+
+.xlc-proyecto-destacados-section {
+  background-color: var(--xlc-beige);
+  padding-top: 9.75rem;
+  padding-bottom: 9.75rem;
+}
+.xlc-proyecto-destacados-section .xlc-grid {
+  padding: 2rem 0 2rem;
+  border-top: 1px solid var(--xlc-gray);
+  grid-template-areas: "title title title . . . description description description description description description";
+}
+.xlc-proyecto-destacados-section .xlc-grid .xlc-destacado-title {
+  grid-area: title;
+  font-size: var(--xlc-m-font-size);
+  font-weight: bold;
+}
+.xlc-proyecto-destacados-section .xlc-grid .xlc-destacado-description {
+  grid-area: description;
+  font-size: var(--xlc-s-font-size);
+  line-height: var(--xlc-subtitles-line-height);
+}
+.xlc-proyecto-destacados-section .xlc-grid:last-of-type {
+  padding: 2rem 0 0;
+}
+
+.xlc-proyecto-cta-section {
+  background-color: var(--xlc-black);
+  color: var(--xlc-white);
+}
+.xlc-proyecto-cta-section .xlc-grid {
+  padding-bottom: var(--xlc-section-top-padding);
+  grid-template-areas: "title title title . . . . . . . . ." "description description description description description . . . . btn btn btn";
+  row-gap: 1rem;
+}
+.xlc-proyecto-cta-section .xlc-grid .xlc-title {
+  grid-area: title;
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-proyecto-cta-section .xlc-grid .xlc-description {
+  grid-area: description;
+  font-size: var(--xlc-s-font-size);
+  line-height: var(--xlc-subtitles-line-height);
+}
+.xlc-proyecto-cta-section .xlc-grid .xlc-orange-btn {
+  grid-area: btn;
+}
+
+.xlc-proyecto-more-info-section {
+  background-color: var(--xlc-beige);
+}
+.xlc-proyecto-more-info-section .xlc-grid {
+  padding-bottom: var(--xlc-section-top-padding);
+  grid-template-areas: "title title title . . . description description description description description description";
+}
+.xlc-proyecto-more-info-section .xlc-grid .xlc-title {
+  grid-area: title;
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-proyecto-more-info-section .xlc-grid .xlc-description {
+  grid-area: description;
+  font-size: var(--xlc-s-font-size);
+  line-height: var(--xlc-subtitles-line-height);
+}
+
+/* #endregion Cada proyecto */
 .xlc-header {
   position: fixed;
   width: 100%;
