pagina de cada proyecto terminada

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,7 @@ input, button, textarea, select {
   transition: all, var(--xlc-transition-projects-interval);
 }
 .xlc-projects-list .xlc-project .xlc-project-img img {
+  object-fit: cover;
   position: relative;
   z-index: 2;
   opacity: 0.32;
@@ -807,6 +808,54 @@ input, button, textarea, select {
   grid-area: description;
   font-size: var(--xlc-s-font-size);
   line-height: var(--xlc-subtitles-line-height);
+}
+
+.xlc-proyecto-gallery-section {
+  background-color: var(--xlc-beige);
+}
+.xlc-proyecto-gallery-section .xlc-grid {
+  grid-template-areas: "title title title title title title . . . . . ." "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery";
+}
+.xlc-proyecto-gallery-section .xlc-grid .xlc-title {
+  grid-area: title;
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container {
+  grid-area: gallery;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 0 32%;
+}
+.xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container .xlc-image {
+  width: 32%;
+  height: 291.15px;
+  margin-right: 2%;
+  margin-top: 2%;
+  object-fit: contain;
+}
+.xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container .xlc-image:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+.xlc-proyecto-video-section {
+  background-color: var(--xlc-beige);
+  padding-bottom: 10rem;
+}
+.xlc-proyecto-video-section .xlc-grid {
+  grid-template-areas: "title title title title title title . . . . . ." "video video video video video video video video video video video video";
+}
+.xlc-proyecto-video-section .xlc-grid .xlc-title {
+  grid-area: title;
+  font-size: var(--xlc-m-font-size);
+}
+.xlc-proyecto-video-section .xlc-grid .wp-video {
+  grid-area: video;
+  width: 100% !important;
+  height: 100% !important;
+}
+.xlc-proyecto-video-section .xlc-grid .wp-video .xlc-video-container {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 /* #endregion Cada proyecto */
