--- a/assets/sass/components/_lists.scss
+++ b/assets/sass/components/_lists.scss
@@ -90,6 +90,7 @@
             }
 
             img {
+                object-fit: cover;
                 position: relative;
                 z-index: 2;
                 opacity: .32;
