--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,21 @@
   --xlc-transition-projects-interval: 0.2s ease-in;
 }
 
+@media (max-width: 576px) {
+  :root {
+    --xlc-xs-font-size: 0.875rem;
+    --xlc-s-font-size: 0.875rem;
+    --xlc-m-font-size: 1.375rem;
+    --xlc-l-font-size: 1.875rem;
+    --xlc-xl-font-size: 1.875rem;
+    --xlc-headings-line-height: 40px;
+    --xlc-subtitles-line-height: 19px;
+    --xlc-paragraph-line-height: 19px;
+    --xlc-card-description-line-height: 19px;
+    --xlc-grid-gap: 1.25rem;
+    --xlc-grid-lateral-space: 2.375rem;
+  }
+}
 @font-face {
   font-family: "Aller";
   src: url(../font/Aller_Bd.ttf) format("truetype");
@@ -155,6 +170,13 @@ input, button, textarea, select {
   line-height: var(--xlc-paragraph-line-height);
 }
 
+@media (max-width: 576px) {
+  .xlc-enum-card .xlc-number {
+    width: 2rem;
+    height: 2rem;
+    margin-bottom: 1.25rem;
+  }
+}
 .xlc-img-card .xlc-img, .xlc-img-card .xlc-member-img {
   position: relative;
 }
@@ -364,6 +386,11 @@ input, button, textarea, select {
   align-content: start;
 }
 
+@media (max-width: 576px) {
+  .xlc-container > .xlc-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 .xlc-section-vp {
   width: 100vw;
   height: 100vh;
@@ -859,6 +886,449 @@ input, button, textarea, select {
 }
 
 /* #endregion Cada proyecto */
+@media (max-width: 576px) {
+  /* #region Index */
+  .xlc-index-init-section {
+    padding-bottom: var(--xlc-section-top-padding);
+    display: flex;
+    align-items: flex-end;
+  }
+  .xlc-index-init-section .xlc-grid {
+    grid-template-areas: "title title title title" "subtitle subtitle subtitle subtitle";
+  }
+  .xlc-index-init-section .xlc-grid .xlc-title {
+    padding-bottom: 1.5rem;
+  }
+  .xlc-index-init-section::after {
+    background-image: url("../img/index/index-init.png");
+  }
+
+  .xlc-index-nosotros-section .xlc-grid {
+    grid-template-areas: "title title title title" "card1 card1 card1 card1" "card2 card2 card2 card2" "card3 card3 card3 card3" "btn btn btn btn";
+  }
+  .xlc-index-nosotros-section .xlc-grid .xlc-title {
+    grid-area: title;
+    margin-bottom: 3.5rem;
+  }
+  .xlc-index-nosotros-section .xlc-grid .xlc-orange-btn {
+    grid-area: btn;
+    justify-self: stretch;
+  }
+  .xlc-index-nosotros-section::after {
+    background-image: url("../img/index/index-background1.png");
+  }
+
+  .xlc-index-colabora-section {
+    background-color: var(--xlc-beige);
+  }
+  .xlc-index-colabora-section .xlc-grid {
+    grid-template-rows: auto auto 1fr;
+    grid-template-areas: "title title title title img1 img1 img1 img1 img2 img2 img2 img2" "description description description description img1 img1 img1 img1 img2 img2 img2 img2" "btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2";
+  }
+  .xlc-index-colabora-section .xlc-grid .xlc-title {
+    grid-area: title;
+    font-size: var(--xlc-xl-font-size);
+    line-height: 133px;
+  }
+  .xlc-index-colabora-section .xlc-grid .xlc-subtitle {
+    grid-area: description;
+    margin-bottom: 2.375rem;
+  }
+  .xlc-index-colabora-section .xlc-grid .xlc-orange-btn {
+    grid-area: btn;
+  }
+  .xlc-index-colabora-section .xlc-grid .xlc-img-card:nth-of-type(1) {
+    grid-area: img1;
+  }
+  .xlc-index-colabora-section .xlc-grid .xlc-img-card:nth-of-type(2) {
+    grid-area: img2;
+  }
+
+  .xlc-index-presentacion-section > * {
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .xlc-index-presentacion-section .xlc-video-container {
+    width: 100% !important;
+    height: 100% !important;
+    background-color: var(--xlc-black);
+  }
+
+  .xlc-index-proyectos-section {
+    background-color: var(--xlc-beige);
+  }
+  .xlc-index-proyectos-section .xlc-grid {
+    margin-bottom: 5.5rem;
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title title" "description description description description description description";
+  }
+  .xlc-index-proyectos-section .xlc-grid .xlc-title {
+    grid-area: title;
+  }
+  .xlc-index-proyectos-section .xlc-grid .xlc-subtitle {
+    grid-area: description;
+  }
+  .xlc-index-proyectos-section .xlc-projects-list {
+    margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+  }
+
+  .xlc-index-marcas-section {
+    background-color: var(--xlc-beige);
+  }
+  .xlc-index-marcas-section .xlc-grid {
+    margin-bottom: 5.5rem;
+    grid-template-areas: "title title title title title title";
+  }
+  .xlc-index-marcas-section .xlc-grid .xlc-title {
+    grid-area: title;
+  }
+  .xlc-index-marcas-section .xlc-marcas-list {
+    margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+  }
+
+  /* #endregion Index */
+  /* #region Nosotros */
+  .xlc-nosotros-init-section {
+    padding-top: var(--xlc-header-height);
+    display: flex;
+    align-items: center;
+  }
+  .xlc-nosotros-init-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title ." "subtitle subtitle subtitle subtitle subtitle subtitle";
+  }
+  .xlc-nosotros-init-section .xlc-grid .xlc-title {
+    grid-area: title;
+    color: var(--xlc-white);
+  }
+  .xlc-nosotros-init-section .xlc-grid .xlc-subtitle {
+    grid-area: subtitle;
+    color: var(--xlc-white);
+  }
+  .xlc-nosotros-init-section::after {
+    background-image: url("../img/nosotros/nosotros-init.png");
+  }
+
+  .xlc-nosotros-info-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title title . . . . . ." "description description description description description . valores valores valores ods ods ods";
+    row-gap: 13rem;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-title {
+    grid-area: title;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-description {
+    grid-area: description;
+    font-size: var(--xlc-xs-font-size);
+    line-height: var(--xlc-paragraph-line-height);
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-valores {
+    grid-area: valores;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-valores .xlc-valores-title {
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-valores .xlc-valores-list li {
+    padding: 1rem 0;
+    border-top: 1px solid var(--xlc-gray);
+    font-weight: bold;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-ods {
+    grid-area: ods;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-title {
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-list li {
+    display: flex;
+    align-items: center;
+    padding: 1rem 0;
+    font-size: var(--xlc-s-font-size);
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-list li span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.85rem;
+    height: 1.85rem;
+    margin-right: 0.8rem;
+    color: var(--xlc-beige);
+    font-weight: bold;
+    font-size: var(--xlc-xs-font-size);
+    background-color: var(--xlc-black);
+    border-radius: 50%;
+  }
+  .xlc-nosotros-info-section .xlc-grid .xlc-ods .xlc-ods-info {
+    font-weight: lighter;
+    font-style: italic;
+  }
+  .xlc-nosotros-info-section::after {
+    background-image: url("../img/nosotros/nosotros-background1.png");
+  }
+
+  .xlc-nosotros-integrantes-section {
+    background-color: var(--xlc-beige);
+    padding-bottom: var(--xlc-section-top-padding);
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid {
+    grid-template-rows: auto auto auto;
+    grid-template-areas: "integ1 integ1 integ1 integ1 integ2 integ2 integ2 integ2 integ3 integ3 integ3 integ3" "integ4 integ4 integ4 integ4 integ4 integ4 integ5 integ5 integ5 integ5 integ5 integ5" "integ6 integ6 integ6 integ6 integ6 integ6 integ7 integ7 integ7 integ7 integ7 integ7";
+    row-gap: var(--xlc-section-top-padding);
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(1) {
+    grid-area: integ1;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(2) {
+    grid-area: integ2;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(3) {
+    grid-area: integ3;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(4) {
+    grid-area: integ4;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(5) {
+    grid-area: integ5;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(6) {
+    grid-area: integ6;
+  }
+  .xlc-nosotros-integrantes-section .xlc-grid .xlc-img-card:nth-of-type(7) {
+    grid-area: integ7;
+  }
+
+  /* #endregion Nostros */
+  /* #region Proyectos */
+  .xlc-proyectos-init-section {
+    padding-top: var(--xlc-header-height);
+    display: flex;
+    align-items: center;
+  }
+  .xlc-proyectos-init-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title ." "subtitle subtitle subtitle subtitle subtitle subtitle";
+  }
+  .xlc-proyectos-init-section .xlc-grid .xlc-title {
+    grid-area: title;
+    color: var(--xlc-white);
+  }
+  .xlc-proyectos-init-section .xlc-grid .xlc-subtitle {
+    grid-area: subtitle;
+    color: var(--xlc-white);
+  }
+  .xlc-proyectos-init-section::after {
+    background-image: url("../img/proyecto/proyectos-init.png");
+  }
+
+  .xlc-proyectos-info-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title title . . . . . ." "card1 card1 card1 card1 card2 card2 card2 card2 card3 card3 card3 card3";
+  }
+  .xlc-proyectos-info-section .xlc-grid .xlc-title {
+    grid-area: title;
+    margin-bottom: 20rem;
+  }
+  .xlc-proyectos-info-section .xlc-grid .xlc-enum-card:nth-of-type(1) {
+    grid-area: card1;
+  }
+  .xlc-proyectos-info-section .xlc-grid .xlc-enum-card:nth-of-type(2) {
+    grid-area: card2;
+  }
+  .xlc-proyectos-info-section .xlc-grid .xlc-enum-card:nth-of-type(3) {
+    grid-area: card3;
+  }
+  .xlc-proyectos-info-section .xlc-grid .xlc-orange-btn {
+    grid-area: btn;
+    justify-self: stretch;
+  }
+  .xlc-proyectos-info-section::after {
+    background-image: url("../img/proyecto/proyectos-background1.png");
+  }
+
+  .xlc-proyectos-lista-section {
+    background-color: var(--xlc-beige);
+    padding-bottom: 10rem;
+  }
+  .xlc-proyectos-lista-section .xlc-grid {
+    margin-bottom: 5.5rem;
+    grid-template-rows: auto;
+    grid-template-areas: "title title title title title title";
+  }
+  .xlc-proyectos-lista-section .xlc-grid .xlc-title {
+    grid-area: title;
+  }
+  .xlc-proyectos-lista-section .xlc-projects-list {
+    margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+  }
+
+  /* #endregion Proyectos */
+  /* #region Cada proyecto */
+  .xlc-proyecto-init-section {
+    padding-top: var(--xlc-header-height);
+    padding-bottom: var(--xlc-header-height);
+    display: flex;
+    align-items: flex-end;
+  }
+  .xlc-proyecto-init-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title ." "subtitle subtitle subtitle subtitle subtitle subtitle";
+  }
+  .xlc-proyecto-init-section .xlc-grid .xlc-title {
+    grid-area: title;
+    color: var(--xlc-white);
+  }
+  .xlc-proyecto-init-section .xlc-grid .xlc-subtitle {
+    grid-area: subtitle;
+    color: var(--xlc-white);
+  }
+
+  .xlc-proyecto-info-section .xlc-grid {
+    grid-template-rows: auto auto;
+    grid-template-areas: "title title title title title title . . . . . ." "description description description description description description . . descargas descargas descargas descargas";
+    padding-bottom: var(--xlc-header-height);
+    align-content: stretch;
+    height: 100%;
+  }
+  .xlc-proyecto-info-section .xlc-grid .xlc-title {
+    grid-area: title;
+  }
+  .xlc-proyecto-info-section .xlc-grid .xlc-description {
+    grid-area: description;
+    align-self: end;
+    font-size: var(--xlc-xs-font-size);
+    line-height: var(--xlc-paragraph-line-height);
+  }
+  .xlc-proyecto-info-section .xlc-grid .xlc-descargas {
+    grid-area: descargas;
+    align-self: end;
+    max-height: 100%;
+    overflow-y: auto;
+  }
+  .xlc-proyecto-info-section .xlc-grid .xlc-descargas .xlc-descarga {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1rem 1rem 0;
+    border-top: 1px solid var(--xlc-gray);
+  }
+  .xlc-proyecto-info-section .xlc-grid .xlc-descargas .xlc-descarga .xlc-descarga-title {
+    font-size: var(--xlc-s-font-size);
+    font-weight: bold;
+  }
+
+  .xlc-proyecto-destacados-section {
+    background-color: var(--xlc-beige);
+    padding-top: 9.75rem;
+    padding-bottom: 9.75rem;
+  }
+  .xlc-proyecto-destacados-section .xlc-grid {
+    padding: 2rem 0 2rem;
+    border-top: 1px solid var(--xlc-gray);
+    grid-template-areas: "title title title . . . description description description description description description";
+  }
+  .xlc-proyecto-destacados-section .xlc-grid .xlc-destacado-title {
+    grid-area: title;
+    font-size: var(--xlc-m-font-size);
+    font-weight: bold;
+  }
+  .xlc-proyecto-destacados-section .xlc-grid .xlc-destacado-description {
+    grid-area: description;
+    font-size: var(--xlc-s-font-size);
+    line-height: var(--xlc-subtitles-line-height);
+  }
+  .xlc-proyecto-destacados-section .xlc-grid:last-of-type {
+    padding: 2rem 0 0;
+  }
+
+  .xlc-proyecto-cta-section {
+    background-color: var(--xlc-black);
+    color: var(--xlc-white);
+  }
+  .xlc-proyecto-cta-section .xlc-grid {
+    padding-bottom: var(--xlc-section-top-padding);
+    grid-template-areas: "title title title . . . . . . . . ." "description description description description description . . . . btn btn btn";
+    row-gap: 1rem;
+  }
+  .xlc-proyecto-cta-section .xlc-grid .xlc-title {
+    grid-area: title;
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-proyecto-cta-section .xlc-grid .xlc-description {
+    grid-area: description;
+    font-size: var(--xlc-s-font-size);
+    line-height: var(--xlc-subtitles-line-height);
+  }
+  .xlc-proyecto-cta-section .xlc-grid .xlc-orange-btn {
+    grid-area: btn;
+  }
+
+  .xlc-proyecto-more-info-section {
+    background-color: var(--xlc-beige);
+  }
+  .xlc-proyecto-more-info-section .xlc-grid {
+    padding-bottom: var(--xlc-section-top-padding);
+    grid-template-areas: "title title title . . . description description description description description description";
+  }
+  .xlc-proyecto-more-info-section .xlc-grid .xlc-title {
+    grid-area: title;
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-proyecto-more-info-section .xlc-grid .xlc-description {
+    grid-area: description;
+    font-size: var(--xlc-s-font-size);
+    line-height: var(--xlc-subtitles-line-height);
+  }
+
+  .xlc-proyecto-gallery-section {
+    background-color: var(--xlc-beige);
+  }
+  .xlc-proyecto-gallery-section .xlc-grid {
+    grid-template-areas: "title title title title title title . . . . . ." "gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery gallery";
+  }
+  .xlc-proyecto-gallery-section .xlc-grid .xlc-title {
+    grid-area: title;
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container {
+    grid-area: gallery;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 32%;
+  }
+  .xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container .xlc-image {
+    width: 32%;
+    height: 291.15px;
+    margin-right: 2%;
+    margin-top: 2%;
+    object-fit: contain;
+  }
+  .xlc-proyecto-gallery-section .xlc-grid .xlc-gallery-container .xlc-image:nth-of-type(3n) {
+    margin-right: 0;
+  }
+
+  .xlc-proyecto-video-section {
+    background-color: var(--xlc-beige);
+    padding-bottom: 10rem;
+  }
+  .xlc-proyecto-video-section .xlc-grid {
+    grid-template-areas: "title title title title title title . . . . . ." "video video video video video video video video video video video video";
+  }
+  .xlc-proyecto-video-section .xlc-grid .xlc-title {
+    grid-area: title;
+    font-size: var(--xlc-m-font-size);
+  }
+  .xlc-proyecto-video-section .xlc-grid .wp-video {
+    grid-area: video;
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .xlc-proyecto-video-section .xlc-grid .wp-video .xlc-video-container {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
+  /* #endregion Cada proyecto */
+}
 .xlc-header {
   position: fixed;
   width: 100%;
@@ -949,6 +1419,11 @@ input, button, textarea, select {
   transition: transform 0.5s ease-out;
 }
 
+@media (max-width: 576px) {
+  .xlc-header {
+    display: none;
+  }
+}
 .xlc-footer {
   background-color: var(--xlc-beige);
 }
