--- a/assets/sass/abstract/_typo.scss
+++ b/assets/sass/abstract/_typo.scss
@@ -23,3 +23,18 @@ $xlc-line-heights: (
     paragraph:          24px,
     card-description:   28px
 );
+
+$xlc-responsive-font-sizes: (
+    xs: 0.875rem,   // 14px
+    s:  0.875rem,   // 14px Son el mismo porque en movil se verían muy pequeños
+    m:  1.375rem,   // 22px
+    l:  1.875rem,   // 30px
+    xl: 1.875rem,   // 30px
+);
+
+$xlc-responsive-line-heights: (
+    headings:           40px,
+    subtitles:          19px,
+    paragraph:          19px,
+    card-description:   19px
+);
