--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -112,3 +112,7 @@
     transform: translate(0%, 0);
     transition: transform 0.5s ease-out;
 }
+
+@media (max-width: 576px) {
+    .xlc-header { display: none; }
+}
