--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -887,7 +887,7 @@ input, button, textarea, select {
 
 /* #endregion Cada proyecto */
 @media (max-width: 576px) {
-  /* #region Index */
+  /* #region Index (Responsive terminado) */
   .xlc-index-init-section {
     padding-bottom: var(--xlc-section-top-padding);
     display: flex;
@@ -903,16 +903,17 @@ input, button, textarea, select {
     background-image: url("../img/index/index-init.png");
   }
 
+  .xlc-index-nosotros-section {
+    height: auto !important;
+  }
   .xlc-index-nosotros-section .xlc-grid {
     grid-template-areas: "title title title title" "card1 card1 card1 card1" "card2 card2 card2 card2" "card3 card3 card3 card3" "btn btn btn btn";
   }
   .xlc-index-nosotros-section .xlc-grid .xlc-title {
-    grid-area: title;
     margin-bottom: 3.5rem;
   }
   .xlc-index-nosotros-section .xlc-grid .xlc-orange-btn {
-    grid-area: btn;
-    justify-self: stretch;
+    margin-bottom: 4.725rem;
   }
   .xlc-index-nosotros-section::after {
     background-image: url("../img/index/index-background1.png");
@@ -920,22 +921,21 @@ input, button, textarea, select {
 
   .xlc-index-colabora-section {
     background-color: var(--xlc-beige);
+    height: auto !important;
   }
   .xlc-index-colabora-section .xlc-grid {
     grid-template-rows: auto auto 1fr;
-    grid-template-areas: "title title title title img1 img1 img1 img1 img2 img2 img2 img2" "description description description description img1 img1 img1 img1 img2 img2 img2 img2" "btn btn btn . img1 img1 img1 img1 img2 img2 img2 img2";
+    grid-template-areas: "title title title title" "description description description description" "btn btn btn btn" "img1 img1 img2 img2";
   }
   .xlc-index-colabora-section .xlc-grid .xlc-title {
-    grid-area: title;
-    font-size: var(--xlc-xl-font-size);
-    line-height: 133px;
+    line-height: 24px;
+    margin-bottom: 1rem;
   }
   .xlc-index-colabora-section .xlc-grid .xlc-subtitle {
-    grid-area: description;
-    margin-bottom: 2.375rem;
+    margin-bottom: 2rem;
   }
   .xlc-index-colabora-section .xlc-grid .xlc-orange-btn {
-    grid-area: btn;
+    margin-bottom: 2rem;
   }
   .xlc-index-colabora-section .xlc-grid .xlc-img-card:nth-of-type(1) {
     grid-area: img1;
@@ -944,6 +944,9 @@ input, button, textarea, select {
     grid-area: img2;
   }
 
+  .xlc-index-presentacion-section {
+    height: auto !important;
+  }
   .xlc-index-presentacion-section > * {
     width: 100% !important;
     height: 100% !important;
@@ -958,18 +961,28 @@ input, button, textarea, select {
     background-color: var(--xlc-beige);
   }
   .xlc-index-proyectos-section .xlc-grid {
-    margin-bottom: 5.5rem;
+    margin-bottom: 3.125rem;
     grid-template-rows: auto auto;
     grid-template-areas: "title title title title title title" "description description description description description description";
   }
   .xlc-index-proyectos-section .xlc-grid .xlc-title {
-    grid-area: title;
-  }
-  .xlc-index-proyectos-section .xlc-grid .xlc-subtitle {
-    grid-area: description;
+    margin-bottom: 1rem;
   }
   .xlc-index-proyectos-section .xlc-projects-list {
-    margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+    margin-left: calc(0px - var(--xlc-grid-lateral-space));
+    overflow-x: auto;
+    flex-wrap: nowrap;
+  }
+  .xlc-index-proyectos-section .xlc-projects-list .xlc-project, .xlc-index-proyectos-section .xlc-projects-list .xlc-all-project {
+    min-width: 21rem;
+    height: 14.75rem;
+    padding: 1.25rem;
+  }
+  .xlc-index-proyectos-section .xlc-projects-list .xlc-project .xlc-project-title, .xlc-index-proyectos-section .xlc-projects-list .xlc-all-project .xlc-project-title {
+    font-size: var(--xlc-l-font-size);
+  }
+  .xlc-index-proyectos-section .xlc-projects-list .xlc-project {
+    margin-right: 1rem;
   }
 
   .xlc-index-marcas-section {
@@ -984,6 +997,14 @@ input, button, textarea, select {
   }
   .xlc-index-marcas-section .xlc-marcas-list {
     margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+  }
+  .xlc-index-marcas-section .xlc-marcas-list .xlc-marca {
+    width: 50%;
+    height: 12.875rem;
+    padding: 1rem;
+  }
+  .xlc-index-marcas-section .xlc-marcas-list .xlc-marca:nth-child(2n) {
+    border-right: none;
   }
 
   /* #endregion Index */
@@ -1421,7 +1442,7 @@ input, button, textarea, select {
 
 @media (max-width: 576px) {
   .xlc-header {
-    display: none;
+    position: absolute;
   }
 }
 .xlc-footer {
@@ -1430,7 +1451,6 @@ input, button, textarea, select {
 .xlc-footer .xlc-footer-dona, .xlc-footer .xlc-footer-colabora {
   position: relative;
   height: 38rem;
-  grid-template-rows: auto auto auto;
   grid-template-areas: "title title title title title title . . . . . ." "description description description description description description . . . . . ." "btn btn btn . . . . . . . . .";
 }
 .xlc-footer .xlc-footer-dona .xlc-title, .xlc-footer .xlc-footer-colabora .xlc-title {
@@ -1527,6 +1547,38 @@ input, button, textarea, select {
   justify-self: end;
   font-size: var(--xlc-xs-font-size);
   font-weight: lighter;
+}
+
+@media (max-width: 576px) {
+  .xlc-footer .xlc-footer-dona, .xlc-footer .xlc-footer-colabora {
+    width: 100vw;
+    height: 100vh;
+    max-width: 100%;
+    grid-template-areas: "title title title title" "description description description description" "btn btn btn btn";
+  }
+  .xlc-footer .xlc-footer-dona .xlc-title, .xlc-footer .xlc-footer-colabora .xlc-title {
+    margin-bottom: 2rem;
+  }
+  .xlc-footer .xlc-footer-dona .xlc-subtitle, .xlc-footer .xlc-footer-colabora .xlc-subtitle {
+    margin-bottom: 28rem;
+  }
+  .xlc-footer .xlc-footer-info {
+    grid-template-areas: "links links links links" "legal legal legal legal" "newsletter newsletter newsletter newsletter" "ubi ubi ubi ubi" "rrss rrss rrss rrss" "copy copy copy copy";
+    padding-bottom: 5rem;
+    row-gap: 2rem;
+  }
+  .xlc-footer .xlc-footer-info .xlc-links li.xlc-footer-menu2 {
+    padding-top: 0.8rem;
+  }
+  .xlc-footer .xlc-footer-info .xlc-links li:last-child {
+    padding-top: 0;
+  }
+  .xlc-footer .xlc-footer-info .xlc-links, .xlc-footer .xlc-footer-info .xlc-legal-info {
+    font-size: 1.125rem;
+  }
+  .xlc-footer .xlc-footer-info .xlc-footer-logo {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
