--- a/assets/sass/layout/_responsive_sections.scss
+++ b/assets/sass/layout/_responsive_sections.scss
@@ -96,12 +96,11 @@
 
         .xlc-projects-list {
             margin-left: calc(0px - var(--xlc-grid-lateral-space));
-            overflow-x: auto;
-            flex-wrap: nowrap;
+            grid-template-columns: repeat(1, 1fr);
+            grid-auto-rows: 14.75rem;
 
             .xlc-project, .xlc-all-project {
-                min-width: 21rem;
-                height: 14.75rem;
+                // min-width: 21rem;
                 padding: 1.25rem;
 
                 .xlc-project-title {
@@ -128,10 +127,10 @@
 
         .xlc-marcas-list {
             margin: 0 calc(0px - var(--xlc-grid-lateral-space));
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-rows: 12.875rem;
 
             .xlc-marca {
-                width: 50%;
-                height: 12.875rem;
                 padding: 1rem;
 
                 &:nth-child(2n) {
@@ -226,20 +225,10 @@
         padding-bottom: var(--xlc-section-top-padding);
 
         .xlc-grid {
-            grid-template-rows: auto auto auto;
-            grid-template-areas: 
-                "integ1 integ1 integ1 integ1 integ2 integ2 integ2 integ2 integ3 integ3 integ3 integ3"
-                "integ4 integ4 integ4 integ4 integ4 integ4 integ5 integ5 integ5 integ5 integ5 integ5"
-                "integ6 integ6 integ6 integ6 integ6 integ6 integ7 integ7 integ7 integ7 integ7 integ7";
-            row-gap: var(--xlc-section-top-padding);
 
-            .xlc-img-card:nth-of-type(1) { grid-area: integ1; }
-            .xlc-img-card:nth-of-type(2) { grid-area: integ2; }
-            .xlc-img-card:nth-of-type(3) { grid-area: integ3; }
-            .xlc-img-card:nth-of-type(4) { grid-area: integ4; }
-            .xlc-img-card:nth-of-type(5) { grid-area: integ5; }
-            .xlc-img-card:nth-of-type(6) { grid-area: integ6; }
-            .xlc-img-card:nth-of-type(7) { grid-area: integ7; }
+            .xlc-img-card {
+                grid-column: span 6 !important;
+            }
         }
     }
 
@@ -452,21 +441,14 @@
             }
             .xlc-gallery-container {
                 grid-area: gallery;
-                display: flex;
-                flex-wrap: wrap;
-                flex: 0 0 32%;
+                
+                grid-template-columns: repeat(1, 1fr);
+                column-gap: 1rem;
+                row-gap: 1rem;
 
                 .xlc-image {
-                    width: 32%;
                     height: 291.15px;
-                    margin-right: 2%;
-                    margin-top: 2%;
                     object-fit: contain;
-
-
-                    &:nth-of-type(3n) {
-                        margin-right: 0;
-                    }
                 }
             }
         }
