--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -237,20 +237,16 @@
     padding-bottom: var(--xlc-section-top-padding);
 
     .xlc-grid {
-        grid-template-rows: auto auto auto;
-        grid-template-areas: 
-            "integ1 integ1 integ1 integ1 integ2 integ2 integ2 integ2 integ3 integ3 integ3 integ3"
-            "integ4 integ4 integ4 integ4 integ4 integ4 integ5 integ5 integ5 integ5 integ5 integ5"
-            "integ6 integ6 integ6 integ6 integ6 integ6 integ7 integ7 integ7 integ7 integ7 integ7";
+        grid-template-columns: repeat(6, 1fr);
         row-gap: var(--xlc-section-top-padding);
 
-        .xlc-img-card:nth-of-type(1) { grid-area: integ1; }
-        .xlc-img-card:nth-of-type(2) { grid-area: integ2; }
-        .xlc-img-card:nth-of-type(3) { grid-area: integ3; }
-        .xlc-img-card:nth-of-type(4) { grid-area: integ4; }
-        .xlc-img-card:nth-of-type(5) { grid-area: integ5; }
-        .xlc-img-card:nth-of-type(6) { grid-area: integ6; }
-        .xlc-img-card:nth-of-type(7) { grid-area: integ7; }
+        .xlc-img-card {
+            grid-column: span 3;
+        }
+
+        .xlc-img-card:nth-child(-n+3) {
+            grid-column: span 2;
+        }
     }
 }
 
@@ -463,21 +459,17 @@
         }
         .xlc-gallery-container {
             grid-area: gallery;
-            display: flex;
-            flex-wrap: wrap;
-            flex: 0 0 32%;
+            
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-rows: 291.15px;
+            column-gap: 2rem;
+            row-gap: 2rem;
+            justify-items: center;
 
             .xlc-image {
-                width: 32%;
                 height: 291.15px;
-                margin-right: 2%;
-                margin-top: 2%;
                 object-fit: contain;
-
-
-                &:nth-of-type(3n) {
-                    margin-right: 0;
-                }
             }
         }
     }
